--- a/project.ipynb
+++ b/project.ipynb
@@ -119,7 +119,6 @@
     "Pick one of the following data sets to analyze in this project.\n",
     "Load the data set, and show a random sample of 10 rows.\n",
     "\n",
-    
     "* [Wine Quality](https://archive.ics.uci.edu/dataset/186/wine+quality) ([PMLB - red subset only](https://github.com/EpistasisLab/pmlb/tree/master/datasets/wine_quality_red))\n",
     "* [Body Fat](https://www.openml.org/search?type=data&status=active&id=560) ([PMLB](https://github.com/EpistasisLab/pmlb/tree/master/datasets/560_bodyfat))\n",
     "\n",
@@ -132,11 +131,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Density   Age  Weight  Height       Neck       Chest     Abdomen  \\\n",
+      "93    1.0424  46.0  192.50   71.75  38.000000  106.599998   97.500000   \n",
+      "68    1.0847  54.0  155.25   69.25  37.500000   89.300003   78.400002   \n",
+      "197   1.0583  42.0  168.00   71.50  36.500000   92.000000   89.699997   \n",
+      "81    1.0382  64.0  150.25   67.25  38.099998   97.099998   89.000000   \n",
+      "4     1.0340  24.0  184.25   71.25  34.400002   97.300003  100.000000   \n",
+      "92    1.0795  47.0  165.25   70.50  37.500000   97.199997   83.099998   \n",
+      "161   1.0653  33.0  196.00   73.00  38.500000  103.800003   95.599998   \n",
+      "179   1.0603  39.0  234.75   74.50  42.799999  109.500000  104.500000   \n",
+      "236   1.0424  62.0  191.50   72.25  40.599998  104.000000   98.199997   \n",
+      "26    1.0811  34.0  131.50   67.50  36.200001   88.599998   74.599998   \n",
+      "\n",
+      "            Hip      Thigh       Knee      Ankle     Biceps    Forearm  \\\n",
+      "93   100.599998  58.900002  40.500000  24.500000  33.299999  29.600000   \n",
+      "68    96.099998  56.000000  37.400002  22.400000  32.599998  28.100000   \n",
+      "197  101.000000  62.299999  38.000000  22.299999  30.799999  27.799999   \n",
+      "81    96.900002  54.799999  38.000000  22.000000  29.900000  25.200001   \n",
+      "4    101.900002  63.200001  42.200001  24.000000  32.200001  27.700001   \n",
+      "92    95.400002  56.900002  38.299999  22.100000  30.100000  28.200001   \n",
+      "161  105.099998  61.400002  40.599998  25.000000  31.299999  29.200001   \n",
+      "179  109.900002  69.500000  43.099998  25.799999  39.099998  32.500000   \n",
+      "236  101.099998  59.299999  40.299999  23.000000  32.599998  28.500000   \n",
+      "26    85.300003  51.700001  34.700001  21.400000  28.700001  27.000000   \n",
+      "\n",
+      "         Wrist     target  \n",
+      "93   19.100000  24.900000  \n",
+      "68   18.100000   6.300000  \n",
+      "197  16.900000  17.700001  \n",
+      "81   17.700001  26.799999  \n",
+      "4    17.700001  28.700001  \n",
+      "92   18.400000   8.500000  \n",
+      "161  19.100000  14.600000  \n",
+      "179  19.900000  16.900000  \n",
+      "236  19.000000  24.799999  \n",
+      "26   16.500000   7.900000  \n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "data = \"https://github.com/EpistasisLab/pmlb/raw/refs/heads/master/datasets/560_bodyfat/560_bodyfat.tsv.gz\"\n",
+    "df = pd.read_csv(data, sep=\"\\t\")\n",
+    "df_sample = df.sample(n=10)\n",
+    "print(df_sample)"
    ]
   },
   {
@@ -157,11 +201,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Density\n",
+      "Age\n",
+      "Weight\n",
+      "Height\n",
+      "Neck\n",
+      "Chest\n",
+      "Abdomen\n",
+      "Hip\n",
+      "Thigh\n",
+      "Knee\n",
+      "Ankle\n",
+      "Biceps\n",
+      "Forearm\n",
+      "Wrist\n",
+      "target\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "for col in df_sample.columns:\n",
+    "    print(col)"
    ]
   },
   {
@@ -405,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
